# layout-engine

./: .gitignore  CMakeLists.txt  README.md
examples/: complex_example.txt  nested_layout.txt  simple_block.txt  simple_flex.txt
src/: main.cpp
src/core/: EdgeValues.cpp  EdgeValues.h  LayoutEnums.h  LayoutNode.cpp  LayoutNode.h
src/core/layout/: LayoutConstraints.h
src/layout/: BlockLayout.cpp  BlockLayout.h  FlexLayout.cpp  FlexLayout.h  LayoutEngine.cpp  LayoutEngine.h
src/output/: OutputFormatter.cpp  OutputFormatter.h
src/parser/: LayoutParser.cpp  LayoutParser.h
src/text/: FontMetrics.cpp  FontMetrics.h  TextLayout.cpp  TextLayout.h
tests/: test_block_layout.cpp  test_edge_values.cpp  test_flex_layout.cpp  test_layout_constraints.cpp  test_layout_engine.cpp  test_output_formatter.cpp  test_parser.cpp  test_text_layout.cpp  tests_layout_node.cpp
visualizer/: text_layout.html
